# textstat-cli-tddschn

./: .bumpversion.cfg  README.md  pyproject.toml
textstat_cli_tddschn/: cli.py
