[tool.poetry]
name = "textstat-cli-tddschn"
version = "0.1.0"
description = ""
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
textstat = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
