[tool.poetry]
name = "textstat-cli-tddschn"
version = "0.1.0"
description = ""
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tddschn/textstat-cli-tddschn"
repository = "https://github.com/tddschn/textstat-cli-tddschn"
classifiers = ["Topic :: Utilities"]
keywords = [
    "text",
    "text-analysis",
    "cli",
    "textstat",
    "utility",
    'command-line',
]
[tool.poetry.scripts]
textstat-cli = "textstat_cli_tddshcn.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/textstat-cli-tddschn/issues"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
textstat = "^0.7.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
